api-ingress/api-middlewar.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: sunalpha
  namespace: iplonapis
spec:
  # redirectRegex:
  #   regex: ^chitthoor/(.*)
  #   replacement: "/plant/chitthoor/${1}"
  stripPrefix:
    forceSlash: false
    prefixes:
      - /plant
      - /fleet
      - /chitthoor/
      - /sunalpha/
