api-ingress/regex-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: regexapi
  namespace: iplonapis
spec:
  redirectRegex:
    regex: /chitthoor/(.*)
    replacement: www.google.com
