api-ingress/ingress-kubedashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-dashboard
  namespace: kubernetes-dashboard
  labels:
     name: kube-dashboard
     reponame: iplon-ingress

  annotations:
    # kubernetes.io/ingress.class: "tr-ingress-igrafana-prod"
    # cert-manager.io/cluster-issuer: "letsencrypt-prod-igrafana"
    kubernetes.io/ingress.class: "public-ingress"
    cert-manager.io/cluster-issuer: "letsencrypt-public-ingress"
    kubernetes.io/force-ssl-redirect: 'true'
    kubernetes.io/ingress.allow-http: "false"


spec:

  tls:
    - hosts:
      - sunalpha.iplon.co.in
      secretName: kube-dashboard-tls-prod


  rules:
  - host: sunalpha.iplon.co.in
    http:
        paths:
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
